feat: Update invoice generation to include total price and improve discount validation in ProductionStock